Module working without JDBC dependencies (yay)