@@ -15,6 +15,7 @@ import org.eclipse.birt.report.engine.api.IReportEngineFactory;
 import org.eclipse.core.internal.registry.RegistryProviderFactory;
 import simpleorm.dataset.SQuery;
 
+import javax.transaction.Synchronization;
 import java.io.File;
 import java.io.IOException;
 import java.net.MalformedURLException;
@@ -23,6 +24,7 @@ import java.net.URLClassLoader;
 import java.util.ArrayList;
 import java.util.Arrays;
 import java.util.Objects;
+import java.util.jar.JarFile;
 import java.util.logging.Level;
 import java.util.logging.Logger;
 import java.util.stream.Collectors;
@@ -85,18 +87,42 @@ public class ReportEngineService {
         // build list of URLs for every file in jdbc folder
         var driverURLs = new ArrayList<>(jdbcDrivers.length);
         for (File jarFile : jdbcDrivers) {
-            driverURLs.add(jarFile.toURI().toURL());
+            driverURLs.add(new URL("jar:file:" + jarFile.getAbsolutePath() + "!/"));
         }
 
         // get the birt driver manager and initialize it with JDBC classes from the user-lib/jdbc folder
         var driverManager = JDBCDriverManager.getInstance();
-        try (var urlClassLoader = new URLClassLoader(driverURLs.toArray(new URL[0]), Thread.currentThread().getContextClassLoader())) {
+        try (var urlClassLoader = new URLClassLoader(driverURLs.toArray(new URL[0]), getClass().getClassLoader())) {
+
+            // load all classes of each jar file
+            for (File jarFile : jdbcDrivers) {
+                try(JarFile jar = new JarFile(jarFile)) {
+                    var classes = jar.stream()
+                            .filter(entry -> entry.getName().endsWith(".class"))
+                            .map(entry -> entry.getName().replace("/", ".").replace(".class", ""))
+                            .collect(Collectors.toList());
+
+                    // add each class to the driver manager
+                    for (String className : classes) {
+                        try {
+                            logger.debugf("Loading JDBC Driver Class: " + className);
+                            urlClassLoader.loadClass(className);
+                        } catch (ClassNotFoundException e) {
+                            logger.warnf("Unable to load Class: %s in file: %s", className, jarFile.getPath(), e);
+                        } catch (NoClassDefFoundError e1) {
+                            logger.debugf("Missing dependency class: %s in file: %s", className, jarFile.getPath(), e1);
+                        }
+                    }
+                } catch (Exception e) {
+                    logger.info("Wtf is going on", e);
+                }
+            }
 
             // If BIRT is unable to find a class then it uses the Thread's context class loader.  We need to set it to the
             // URLClassLoader we created so that it can find the JDBC drivers.
             Thread.currentThread().setContextClassLoader(urlClassLoader);
 
-            // get all the JDBC drivers from the database, so we can get the class names
+            // get list of configured JDBC drivers from the database and load them into BIRT
             var drivers = gatewayContext.getLocalPersistenceInterface().query(new SQuery<>(JDBCDriverRecord.META));
             drivers.forEach(driver -> {
                 try {
@@ -107,6 +133,7 @@ public class ReportEngineService {
                     logger.warnf("Failed to load driver: %s", driver.getClassname(), e);
                 }
             });
+
         }
     }
 
